remove ipynb checkpoints

--- a/README.ipynb
+++ b/README.ipynb
@@ -137,6 +137,8 @@
     "\n",
     "## Model\n",
     "\n",
+    "Several different models where iterated through. However, the largest difficulty enountered was in regards to the available memory on the GPU that was used for the computations. It was had a memory capacity of 2GB and that showed very fast the incapacity to work on medium to large convolutional nets.  \n",
+    "\n",
     "![][model]\n",
     "\n",
     "## Results\n",
